src/components/navbar/Navbar.module.scss
@import '../../styles/colors.scss';

.Navbar {
    width: 100%;
    height: 95px;
    display: flex;
    position: fixed;
    align-items: center;
    background-color: $red;
    z-index: 100;

    &__Links {
        width: 764px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: auto;
    }
}

@media (max-width: 414px) {
    .Wrapper {
        padding: 50px;
    }
}

